descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.

----------------------------------------------------------------------
--- 2021-XX-XX  Release 7.32.6                                     ---
----------------------------------------------------------------------

* updated bundled Eigen dependency to v3.4.0 - Cliff Yapp
* fixed bot_merge crash when bots are of different types - Cliff Yapp
* fixed nirt -L to not require database and objects - Sean Morrison
* fixed bug reading older VOL objects with file data - Sean Morrison
* fixed pixscale bug when scaling images down - Sean Morrison

----------------------------------------------------------------------
--- 2021-07-27  Release 7.32.4                                     ---
----------------------------------------------------------------------

* Added -matrix search filter for finding comb matrices - Cliff Yapp
* fixed MGED handling of long running subprocesses in script mode
        - Cliff Yapp, Sean Morrison
* improve documentation for bot modes in bot and search - Cliff Yapp
* added -o output option to GED stat command - Cliff Yapp
* fixed overlay support for drawing multiple files - Cliff Yapp
* fixed file creation for tire command - Cliff Yapp
* fixed mixing object and full path searches in MGED - Cliff Yapp
* fixed launching of ISST graphical viewer - Cliff Yapp


----------------------------------------------------------------------
--- 2021-02-06  Release 7.32.2                                     ---
----------------------------------------------------------------------

* fixed OSX g-iges crash due to improper memory freeing - Cliff Yapp
* fixed GQA multithreaded plotting file corruption - Cliff Yapp
* added -S structural diff option to MGED gdiff command - Cliff Yapp
* added -v verbosity option to MGED tree command - Cliff Yapp
* added -? option to MGED which command - Cliff Yapp